# sandbox_cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  security_demo.cpp
source/: main.cpp
source/include/sandbox/config/: config.h
source/include/sandbox/core/: logger.h  sandbox.h
source/include/sandbox/security/: policy.h  seccomp.h
source/include/sandbox/utils/: string_utils.h
source/src/config/: config.cpp
source/src/core/: logger.cpp  sandbox.cpp
source/src/security/: policy.cpp  seccomp.cpp
tests/: CMakeLists.txt
tests/integration_tests/: test_security_integration.cpp
tests/unit_tests/: test_config.cpp  test_logger.cpp  test_sandbox.cpp  test_seccomp.cpp  test_security_policy.cpp
